force-app/main/default/objects/Position_Allocation__c/Position_Allocation__c.object-meta.xml
<CustomObject>
    <label>Position Allocation</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>