force-app/main/default/objects/Position_Allocation__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Position Allocations</relationshipLabel>
    <relationshipName>Position_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>