force-app/main/default/objects/Position_Allocation__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JPA</fullName>
            </value>
            <value>
                <fullName>TWA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>