force-app/main/default/objects/Position_Allocation__c/fields/PA_Assign__c.field-meta.xml
<CustomField>
    <fullName>PA_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Assign</label>
    <type>Checkbox</type>
</CustomField>