force-app/main/default/objects/Position_Allocation__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIC</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>OJT</fullName>
            </value>
            <value>
                <fullName>OJC</fullName>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
            <value>
                <fullName>PX</fullName>
            </value>
            <value>
                <fullName>ENG</fullName>
            </value>
            <value>
                <fullName>ADD</fullName>
                <isActive>false</isActive>
                <label>AOC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>