force-app/main/default/objects/Position_Allocation__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>