force-app/main/default/objects/Position_Allocation__c/fields/Rank_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Rank_Effective_Date__c</fullName>
    <label>Rank Effective Date</label>
    <type>Date</type>
</CustomField>