force-app/main/default/objects/Position_Allocation__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>TextArea</type>
</CustomField>